<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CreateListingFragment">

    <TextView
        android:id="@+id/listingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/create_listing_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="275dp"
        android:layout_height="600dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="81dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/role_label"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/driver_label"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/passenger_label"
                android:textSize="16sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/seats_label" />

            <EditText
                android:id="@+id/editTextTextPersonName9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/seats_hint_label"
                android:autofill="Name" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/date_label"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextDate5"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:autofillHints="@string/date_hint_label"
                android:ems="10"
                android:hint="@string/date_hint_label"
                android:inputType="date"
                android:minHeight="50dp"
                android:textColorHint="#757575" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/time_label"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextTime"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:autofillHints="@string/time_hint_label"
                android:ems="10"
                android:hint="@string/time_hint_label"
                android:inputType="time"
                android:minHeight="50dp"
                android:textColorHint="#757575" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/start_location_label"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextTextPersonName6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:autofillHints="@string/start_location_hint_label"
                android:ems="10"
                android:hint="@string/start_location_hint_label"
                android:inputType="textPersonName"
                android:minHeight="50dp"
                android:textColorHint="#757575" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/end_location_label" />

            <EditText
                android:id="@+id/editTextTextPersonName8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:autofillHints="@string/end_location_hint_label"
                android:ems="10"
                android:hint="@string/end_location_hint_label"
                android:inputType="textPersonName"
                android:minHeight="50dp"
                android:textColorHint="#757575" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>