<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/frameLayout"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".view.FilterFragment">

<TextView
    android:id="@+id/filterLabel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:text="@string/filter_label"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<LinearLayout
    android:layout_width="290dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="60dp"
    android:layout_marginTop="70dp"
    android:layout_marginEnd="61dp"
    android:layout_marginBottom="121dp"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/filterLabel">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/role_wanted_label"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/driver_wanted_label"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/passenger_wanted_label"
            android:textSize="16sp" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/seats_wanted_label"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/enterSeats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/seats_wanted_hint_label"
            android:inputType="textPersonName"
            android:minHeight="50dp"
            android:textColorHint="#757575" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/date_wanted_label"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/enterDate"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/date_wanted_hint_label"
            android:ems="10"
            android:hint="@string/date_wanted_hint_label"
            android:inputType="date"
            android:minHeight="50dp"
            android:textColorHint="#757575" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/time_wanted_label"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/enterTime"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/time_wanted_hint_label"
            android:ems="10"
            android:hint="@string/time_wanted_hint_label"
            android:inputType="time"
            android:minHeight="50dp"
            android:textColorHint="#757575" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/start_location_wanted_label"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/enterStartLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:autofillHints="@string/start_wanted_location_hint_label"
            android:ems="10"
            android:hint="@string/start_wanted_location_hint_label"
            android:inputType="textPersonName"
            android:minHeight="50dp"
            android:textColorHint="#757575" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/end_location_wanted_label"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/enterEndLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:autofillHints="@string/end_wanted_location_hint_label"
            android:ems="10"
            android:hint="@string/end_wanted_location_hint_label"
            android:inputType="textPersonName"
            android:minHeight="50dp"
            android:textColorHint="#757575" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/filter_button_label" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>