<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailedLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailedListingFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listing_details"
            android:textColor="#3F51B5"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/posted_on"
                android:textColor="#141414"
                android:textSize="24sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/dateTimePlaceholder"
                android:layout_width="174dp"
                android:layout_height="wrap_content"
                android:text="@string/date_time_placeholder"
                android:textColor="#141414"
                android:textSize="22sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destination"
                android:textColor="#141414"
                android:textSize="24sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/destPlaceholder"
                android:layout_width="167dp"
                android:layout_height="wrap_content"
                android:text="@string/destination_holder"
                android:textColor="#141414"
                android:textSize="22sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textColor="#141414"
                android:textSize="24sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/rolePlaceholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/role_placeholder"
                android:textColor="#141414"
                android:textSize="22sp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meeting_point"
                android:textColor="#141414"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="107dp"
                tools:layout_editor_absoluteY="516dp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/startPlaceholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_placeholder"
                android:textColor="#141414"
                android:textSize="22sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/when"
                android:textColor="#141414"
                android:textSize="24sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/dateTime4Trip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trip_date_time_placeholder"
                android:textColor="#141414"
                android:textSize="22sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/seatPhrase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seats_phrase"
                android:textColor="#141414"
                android:textSize="24sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/seatsPlaceholder"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/seats_placeholder"
                android:textColor="#141414"
                android:textSize="22sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/closeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close" />

            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message" />

            <Space
                android:layout_width="20dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>